// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init > custom setup 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  documents: "graphql/*.ts",
  generates: {
    "src/gql/": {
      preset: "client",
      plugins: []
    },
    "./graphql.schema.json": {
      plugins: ["introspection"]
    }
  }
};

export default config;
"
`;

exports[`init > plugins suggestions for client-side setup > should use angular related plugins when @angular/core is found 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  documents: "src/**/*.ts",
  generates: {
    "src/generated/graphql.ts": {
      plugins: ["typescript-apollo-angular"]
    }
  }
};

export default config;
"
`;

exports[`init > plugins suggestions for client-side setup > should use react related plugins when react is found 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  documents: "src/**/*.tsx",
  generates: {
    "src/gql/": {
      preset: "client",
      plugins: []
    }
  }
};

export default config;
"
`;

exports[`init > plugins suggestions for client-side setup > should use stencil related plugins when @stencil/core is found 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  documents: "src/**/*.graphql",
  generates: {
    "src/generated/graphql.tsx": {
      plugins: ["typescript", "typescript-operations", "typescript-stencil-apollo"]
    }
  }
};

export default config;
"
`;

exports[`init > plugins suggestions non client-side setup > should use typescript related plugins when typescript is found (node) 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  generates: {
    "src/generated/graphql.ts": {
      plugins: ["typescript", "typescript-resolvers"]
    }
  }
};

export default config;
"
`;

exports[`init > should have few default values for Angular 1`] = `
"
import type { CodegenConfig } from '@graphql-codegen/cli';

const config: CodegenConfig = {
  overwrite: true,
  schema: "http://localhost:4000",
  documents: "src/**/*.tsx",
  generates: {
    "src/gql/": {
      preset: "client",
      plugins: []
    }
  }
};

export default config;
"
`;

exports[`init > should have few default values for React 1`] = `
"overwrite: true
schema: "./schema.ts"
documents: "graphql/**/*.graphql"
generates:
  graphql/index.ts:
    preset: "client"
    plugins: []
  ./graphql.schema.json:
    plugins:
      - "introspection"
"
`;
